test: Adapt unit tests to JDK 8